--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^8.3.4",
+    "aws-sdk": "^2.1238.0",
+    "formik": "^2.2.9",
+    "googleapis": "^110.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.2",
+    "@types/node": "^18.11.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "framer-motion": "^8.5.2",
+    "nodemailer": "^6.9.1",
     "sass": "^1.55.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "yup": "^0.32.11"
   }
 }
